all.yaml
#@ app_name = "editor-<project name>"
#@ domain = "<cluster name>-<hash>.<region>.containers.appdomain.cloud"

#@ cos_storage_class = "ibmc-s3fs-standard-regional"
#@ cos_secret_name = "cos-write-access"
#@ cos_storage_space = "64Mi"

#@ image_name = "nodered/node-red:latest-12"

#! Default Node-RED admin password: openshiftFTW
---
apiVersion: v1
kind: Service
metadata:
  name: #@ "{}-svc".format(app_name)
spec:
  selector:
    app: #@ "{}".format(app_name)
  type: NodePort
  ports:
  - name: 1880-tcp
    port: 1880
    targetPort: 1880
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: secure-route
spec:
  host: #@ "{}.{}".format(app_name, domain)
  port:
    targetPort: 1880-tcp
  tls:
    insecureEdgeTerminationPolicy: None
    termination: edge
  to:
    kind: Service
    name: #@ "{}-svc".format(app_name)
    weight: 100
  wildcardPolicy: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: #@ "{}-deploy".format(app_name)
  labels:
    app: #@ "{}".format(app_name)
spec:
  selector:
    matchLabels:
      app: #@ "{}".format(app_name)
  template:
    metadata:
      labels:
        app: #@ "{}".format(app_name)
    spec:
      containers:
      - image: #@ "{}".format(image_name)
        name: #@ "{}".format(app_name)
        volumeMounts:
        - name: node-red-persistence
          mountPath: /data
        - name: editor-settings-volume
          mountPath: "/data/settings.js"
          subPath: "settings.js"
        ports:
        - containerPort: 1880
          protocol: TCP
      volumes:
      - name: node-red-persistence
        persistentVolumeClaim:
          claimName: #@ "{}-pvc".format(app_name)
      - name: editor-settings-volume
        configMap:
          name: editor-settings
