configured.example.yml
apiVersion: v1
kind: Service
metadata:
  name: editor-demo-svc
spec:
  selector:
    app: editor-demo
  type: NodePort
  ports:
  - name: 1880-tcp
    port: 1880
    targetPort: 1880
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: secure-route
spec:
  host: editor-demo.demo-cluster-1234.au-syd.containers.appdomain.cloud
  port:
    targetPort: 1880-tcp
  tls:
    insecureEdgeTerminationPolicy: None
    termination: edge
  to:
    kind: Service
    name: editor-demo-svc
    weight: 100
  wildcardPolicy: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: editor-demo-deploy
  labels:
    app: editor-demo
spec:
  selector:
    matchLabels:
      app: editor-demo
  template:
    metadata:
      labels:
        app: editor-demo
    spec:
      containers:
      - image: nodered/node-red:latest-12
        name: editor-demo
        volumeMounts:
        - name: node-red-persistence
          mountPath: /data
        - name: editor-settings-volume
          mountPath: /data/settings.js
          subPath: settings.js
        ports:
        - containerPort: 1880
          protocol: TCP
      volumes:
      - name: node-red-persistence
        persistentVolumeClaim:
          claimName: editor-demo-pvc
      - name: editor-settings-volume
        configMap:
          name: editor-settings
